fix: add span to forms

--- a/index.html
+++ b/index.html
@@ -19,17 +19,23 @@
             </a>
             <nav class="heading__menu">
                 <ul class="heading__menu-links">
-                    <li class="heading__menu-item"><a href="index.html" target="_blank" class="heading__menu-link">Главная</a>
+                    <li class="heading__menu-item"><a href="index.html" target="_blank"
+                            class="heading__menu-link">Главная</a>
                     </li>
-                    <li class="heading__menu-item"><a href="team.html" target="_blank" class="heading__menu-link">Команда</a>
+                    <li class="heading__menu-item"><a href="team.html" target="_blank"
+                            class="heading__menu-link">Команда</a>
                     </li>
-                    <li class="heading__menu-item"><a href="projects.html" target="_blank" class="heading__menu-link">Услуги</a>
+                    <li class="heading__menu-item"><a href="projects.html" target="_blank"
+                            class="heading__menu-link">Услуги</a>
                     </li>
-                    <li class="heading__menu-item"><a href="career.html" target="_blank" class="heading__menu-link">Карьера</a>
+                    <li class="heading__menu-item"><a href="career.html" target="_blank"
+                            class="heading__menu-link">Карьера</a>
                     </li>
-                    <li class="heading__menu-item"><a href="portfolio.html" target="_blank" class="heading__menu-link">Портфолио</a>
+                    <li class="heading__menu-item"><a href="portfolio.html" target="_blank"
+                            class="heading__menu-link">Портфолио</a>
                     </li>
-                    <li class="heading__menu-item"><a href="contact.html" target="_blank" class="heading__menu-link">Контакты</a>
+                    <li class="heading__menu-item"><a href="contact.html" target="_blank"
+                            class="heading__menu-link">Контакты</a>
                     </li>
                 </ul>
                 <button type="button" class="heading__burger-menu" aria-label="Кнопка меню."></button>
@@ -309,11 +315,12 @@
                         <textarea type="text" name="message" placeholder="Сообщение"
                             class="contacts__form-input contacts__form-input_type_textarea"></textarea>
                         <div class="contacts__form-button-wrapper">
-                            <label class="contacts__form-footnote"><span
-                                    class="contacts__form-footnote contacts__form-footnote_span_accent">*</span>
+                            <label class="form-footnote"><span
+                                    class="form-footnote form-footnote_span_accent">*</span>
                                 обязательные поля для заполнения
                                 <button type="submit" class="contacts__form-button">Отправить</button></label>
-                            <p class="contacts__form-footnote">Нажимая на кнопку, вы соглашаетесь с <a href="">Политикой
+                            <p class="form-footnote">Нажимая на кнопку, вы соглашаетесь с <a
+                                    href="https://vroomgames.ru/politika" target="_blank">Политикой
                                     конфидециальности</a></p>
                         </div>
                     </form>
@@ -376,19 +383,24 @@
                 </div>
                 <div class="footer__menu-container">
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><a href="index.html" target="_blank" class="footer__menu-link">Главная</a>
+                        <li class="footer__menu-item"><a href="index.html" target="_blank"
+                                class="footer__menu-link">Главная</a>
                         </li>
-                        <li class="footer__menu-item"><a href="team.html" target="_blank" class="footer__menu-link">Команда</a>
+                        <li class="footer__menu-item"><a href="team.html" target="_blank"
+                                class="footer__menu-link">Команда</a>
                         </li>
-                        <li class="footer__menu-item"><a href="projects.html" target="_blank" class="footer__menu-link">Услуги</a>
+                        <li class="footer__menu-item"><a href="projects.html" target="_blank"
+                                class="footer__menu-link">Услуги</a>
                         </li>
                     </ul>
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><a href="career.html" target="_blank" class="footer__menu-link">Карьера</a>
+                        <li class="footer__menu-item"><a href="career.html" target="_blank"
+                                class="footer__menu-link">Карьера</a>
                         </li>
                         <li class="footer__menu-item"><a href="portfolio.html" target="_blank"
                                 class="footer__menu-link">Портфолио</a></li>
-                        <li class="footer__menu-item"><a href="contact.html" target="_blank" class="footer__menu-link">Контакты</a>
+                        <li class="footer__menu-item"><a href="contact.html" target="_blank"
+                                class="footer__menu-link">Контакты</a>
                         </li>
                     </ul>
                     <ul class="footer__menu">
@@ -428,13 +440,14 @@
             <div class="footer__info">
                 <p class="footer__signature">&copy; 2022. Дмитрий Малиновский</p>
                 <div class="footer__policy-container">
-                    <a href="https://vroomgames.ru/politika" target="_blank" class="footer__policy">Политика конфиденциальности</a>
+                    <a href="https://vroomgames.ru/politika" target="_blank" class="footer__policy">Политика
+                        конфиденциальности</a>
                     <a href="https://vroomgames.ru/oferta" target="_blank" class="footer__policy">Оферта</a>
                 </div>
             </div>
         </div>
     </footer>
-    
+
     <script src="scripts/index.js"></script>
 </body>
 
