--- a/contact.html
+++ b/contact.html
@@ -19,17 +19,23 @@
             </a>
             <nav class="heading__menu">
                 <ul class="heading__menu-links">
-                    <li class="heading__menu-item"><a href="index.html" target="_blank" class="heading__menu-link">Главная</a>
+                    <li class="heading__menu-item"><a href="index.html" target="_blank"
+                            class="heading__menu-link">Главная</a>
                     </li>
-                    <li class="heading__menu-item"><a href="team.html" target="_blank" class="heading__menu-link">Команда</a>
+                    <li class="heading__menu-item"><a href="team.html" target="_blank"
+                            class="heading__menu-link">Команда</a>
                     </li>
-                    <li class="heading__menu-item"><a href="projects.html" target="_blank" class="heading__menu-link">Услуги</a>
+                    <li class="heading__menu-item"><a href="projects.html" target="_blank"
+                            class="heading__menu-link">Услуги</a>
                     </li>
-                    <li class="heading__menu-item"><a href="career.html" target="_blank" class="heading__menu-link">Карьера</a>
+                    <li class="heading__menu-item"><a href="career.html" target="_blank"
+                            class="heading__menu-link">Карьера</a>
                     </li>
-                    <li class="heading__menu-item"><a href="portfolio.html" target="_blank" class="heading__menu-link">Портфолио</a>
+                    <li class="heading__menu-item"><a href="portfolio.html" target="_blank"
+                            class="heading__menu-link">Портфолио</a>
                     </li>
-                    <li class="heading__menu-item"><a href="contact.html" target="_blank" class="heading__menu-link">Контакты</a>
+                    <li class="heading__menu-item"><a href="contact.html" target="_blank"
+                            class="heading__menu-link">Контакты</a>
                     </li>
                 </ul>
                 <button type="button" class="heading__burger-menu" aria-label="Кнопка меню."></button>
@@ -42,7 +48,8 @@
         </div>
         <div class="contacts__container">
             <h2 class="contacts__title contacts__title_place_contact-page">Связаться</h2>
-            <p class="contacts__subtitle contacts__subtitle_place_contact-page">Готовы предложить Вам лучшие IT-решения</p>
+            <p class="contacts__subtitle contacts__subtitle_place_contact-page">Готовы предложить Вам лучшие IT-решения
+            </p>
             <div class="form-container">
                 <div class="form-description form-description_place_contact-page">
                     <h3 class="form-description__title">Есть идея?</h3>
@@ -60,15 +67,20 @@
                         </div>
                     </div>
                     <ul class="form-description__links">
-                        <li><a href="" class="form-description__link"><img src="images/social_icon_linkedin.svg" alt=""
+                        <li><a href="https://www-linkedin.com/" class="form-description__link"><img
+                                    src="images/social_icon_linkedin.svg" alt="Линкедин."
                                     class="description__link-image"></a></li>
-                        <li><a href="" class="form-description__link"><img src="images/social_icon_google.svg" alt=""
+                        <li><a href="https://www.google.ru/" class="form-description__link"><img
+                                    src="images/social_icon_google.svg" alt="Гугл." class="description__link-image"></a>
+                        </li>
+                        <li><a href="https://www.facebook.com/" class="form-description__link"><img
+                                    src="images/social_icon_facebook.svg" alt="Фейсбук."
                                     class="description__link-image"></a></li>
-                        <li><a href="" class="form-description__link"><img src="images/social_icon_facebook.svg" alt=""
+                        <li><a href="https://dribbble.com/" class="form-description__link"><img
+                                    src="images/social_icon_dribbble.svg" alt="Дрибл."
                                     class="description__link-image"></a></li>
-                        <li><a href="" class="form-description__link"><img src="images/social_icon_dribbble.svg" alt=""
-                                    class="description__link-image"></a></li>
-                        <li><a href="" class="form-description__link"><img src="images/social_icon_instagram.svg" alt=""
+                        <li><a href="https://instagram.com/" class="form-description__link"><img
+                                    src="images/social_icon_instagram.svg" alt="Инстаграм."
                                     class="description__link-image"></a></li>
                     </ul>
                 </div>
@@ -83,11 +95,12 @@
                     <textarea type="text" name="message" placeholder="Сообщение"
                         class="contacts__form-input contacts__form-input_type_textarea"></textarea>
                     <div class="contacts__form-button-wrapper">
-                        <label class="contacts__form-footnote"><span
-                                class="contacts__form-footnote contacts__form-footnote_span_accent">*</span>
+                        <label class="form-footnote"><span
+                                class="form-footnote form-footnote_span_accent">*</span>
                             обязательные поля для заполнения
                             <button type="submit" class="contacts__form-button">Отправить</button></label>
-                        <p class="contacts__form-footnote">Нажимая на кнопку, вы соглашаетесь с <a href="">Политикой
+                        <p class="form-footnote">Нажимая на кнопку, вы соглашаетесь с <a
+                                href="https://vroomgames.ru/politika" target="_blank">Политикой
                                 конфидециальности</a></p>
                     </div>
                 </form>
@@ -111,44 +124,55 @@
                 </div>
                 <div class="footer__menu-container">
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Главная</a></li>
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Команда</a></li>
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Услуги</a></li>
+                        <li class="footer__menu-item"><a href="index.html" target="_blank"
+                                class="footer__menu-link">Главная</a>
+                        </li>
+                        <li class="footer__menu-item"><a href="team.html" target="_blank"
+                                class="footer__menu-link">Команда</a>
+                        </li>
+                        <li class="footer__menu-item"><a href="projects.html" target="_blank"
+                                class="footer__menu-link">Услуги</a>
+                        </li>
                     </ul>
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Карьера</a></li>
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Портфолио</a></li>
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Контакты</a></li>
+                        <li class="footer__menu-item"><a href="career.html" target="_blank"
+                                class="footer__menu-link">Карьера</a>
+                        </li>
+                        <li class="footer__menu-item"><a href="portfolio.html" target="_blank"
+                                class="footer__menu-link">Портфолио</a></li>
+                        <li class="footer__menu-item"><a href="contact.html" target="_blank"
+                                class="footer__menu-link">Контакты</a>
+                        </li>
                     </ul>
                     <ul class="footer__menu">
                         <li class="footer__menu-item">
-                            <a href="#" class="footer__menu-link">
+                            <a href="https://www.google.ru/" target="_blank" class="footer__menu-link">
                                 <p class="footer__link-text" lang="en">Google</p>
-                                <img src="images/social_icon_google.svg" alt="гугл" class="footer__link-image">
+                                <img src="images/social_icon_google.svg" alt="Google." class="footer__link-image">
                             </a>
                         </li>
                         <li class="footer__menu-item">
-                            <a href="#" class="footer__menu-link">
+                            <a href="https://www.facebook.com/" target="_blank" class="footer__menu-link">
                                 <p class="footer__link-text" lang="en">Facebook</p>
-                                <img src="images/social_icon_facebook.svg" alt="фейсбук" class="footer__link-image">
+                                <img src="images/social_icon_facebook.svg" alt="Facebook." class="footer__link-image">
                             </a>
                         </li>
                         <li class="footer__menu-item">
-                            <a href="#" class="footer__menu-link">
+                            <a href="https://instagram.com/" target="_blank" class="footer__menu-link">
                                 <p class="footer__link-text" lang="en">Instagram</p>
-                                <img src="images/social_icon_instagram.svg" alt="инстаграм" class="footer__link-image">
+                                <img src="images/social_icon_instagram.svg" alt="Instagram." class="footer__link-image">
                             </a>
                         </li>
                         <li class="footer__menu-item">
-                            <a href="#" class="footer__menu-link">
+                            <a href="https://dribbble.com/" target="_blank" class="footer__menu-link">
                                 <p class="footer__link-text" lang="en">Dribbble</p>
-                                <img src="images/social_icon_dribbble.svg" alt="дриббл" class="footer__link-image">
+                                <img src="images/social_icon_dribbble.svg" alt="Dribbble." class="footer__link-image">
                             </a>
                         </li>
                         <li class="footer__menu-item">
-                            <a href="#" class="footer__menu-link">
+                            <a href="https://www-linkedin.com/" target="_blank" class="footer__menu-link">
                                 <p class="footer__link-text" lang="en">linkedin</p>
-                                <img src="images/social_icon_linkedin.svg" alt="линкедин" class="footer__link-image">
+                                <img src="images/social_icon_linkedin.svg" alt="linkedin." class="footer__link-image">
                             </a>
                         </li>
                     </ul>
@@ -157,11 +181,12 @@
             <div class="footer__info">
                 <p class="footer__signature">&copy; 2022. Дмитрий Малиновский</p>
                 <div class="footer__policy-container">
-                    <a href="#" class="footer__policy">Политика конфиденциальности</a>
-                    <a href="#" class="footer__policy" lang="en">Cookies Policy</a>
+                    <a href="https://vroomgames.ru/politika" target="_blank" class="footer__policy">Политика
+                        конфиденциальности</a>
+                    <a href="https://vroomgames.ru/oferta" target="_blank" class="footer__policy">Оферта</a>
                 </div>
             </div>
-
+        </div>
     </footer>
 
     <script src="scripts/contact.js"></script>
