--- a/portfolio.html
+++ b/portfolio.html
@@ -144,44 +144,50 @@
                 </div>
                 <div class="footer__menu-container">
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Главная</a></li>
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Команда</a></li>
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Услуги</a></li>
+                        <li class="footer__menu-item"><a href="index.html" target="_blank" class="footer__menu-link">Главная</a>
+                        </li>
+                        <li class="footer__menu-item"><a href="team.html" target="_blank" class="footer__menu-link">Команда</a>
+                        </li>
+                        <li class="footer__menu-item"><a href="projects.html" target="_blank" class="footer__menu-link">Услуги</a>
+                        </li>
                     </ul>
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Карьера</a></li>
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Портфолио</a></li>
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Контакты</a></li>
+                        <li class="footer__menu-item"><a href="career.html" target="_blank" class="footer__menu-link">Карьера</a>
+                        </li>
+                        <li class="footer__menu-item"><a href="portfolio.html" target="_blank"
+                                class="footer__menu-link">Портфолио</a></li>
+                        <li class="footer__menu-item"><a href="contact.html" target="_blank" class="footer__menu-link">Контакты</a>
+                        </li>
                     </ul>
                     <ul class="footer__menu">
                         <li class="footer__menu-item">
-                            <a href="#" class="footer__menu-link">
+                            <a href="https://www.google.ru/" target="_blank" class="footer__menu-link">
                                 <p class="footer__link-text" lang="en">Google</p>
-                                <img src="images/social_icon_google.svg" alt="гугл" class="footer__link-image">
+                                <img src="images/social_icon_google.svg" alt="Google." class="footer__link-image">
                             </a>
                         </li>
                         <li class="footer__menu-item">
-                            <a href="#" class="footer__menu-link">
+                            <a href="https://www.facebook.com/" target="_blank" class="footer__menu-link">
                                 <p class="footer__link-text" lang="en">Facebook</p>
-                                <img src="images/social_icon_facebook.svg" alt="фейсбук" class="footer__link-image">
+                                <img src="images/social_icon_facebook.svg" alt="Facebook." class="footer__link-image">
                             </a>
                         </li>
                         <li class="footer__menu-item">
-                            <a href="#" class="footer__menu-link">
+                            <a href="https://instagram.com/" target="_blank" class="footer__menu-link">
                                 <p class="footer__link-text" lang="en">Instagram</p>
-                                <img src="images/social_icon_instagram.svg" alt="инстаграм" class="footer__link-image">
+                                <img src="images/social_icon_instagram.svg" alt="Instagram." class="footer__link-image">
                             </a>
                         </li>
                         <li class="footer__menu-item">
-                            <a href="#" class="footer__menu-link">
+                            <a href="https://dribbble.com/" target="_blank" class="footer__menu-link">
                                 <p class="footer__link-text" lang="en">Dribbble</p>
-                                <img src="images/social_icon_dribbble.svg" alt="дриббл" class="footer__link-image">
+                                <img src="images/social_icon_dribbble.svg" alt="Dribbble." class="footer__link-image">
                             </a>
                         </li>
                         <li class="footer__menu-item">
-                            <a href="#" class="footer__menu-link">
+                            <a href="https://www-linkedin.com/" target="_blank" class="footer__menu-link">
                                 <p class="footer__link-text" lang="en">linkedin</p>
-                                <img src="images/social_icon_linkedin.svg" alt="линкедин" class="footer__link-image">
+                                <img src="images/social_icon_linkedin.svg" alt="linkedin." class="footer__link-image">
                             </a>
                         </li>
                     </ul>
@@ -190,11 +196,11 @@
             <div class="footer__info">
                 <p class="footer__signature">&copy; 2022. Дмитрий Малиновский</p>
                 <div class="footer__policy-container">
-                    <a href="#" class="footer__policy">Политика конфиденциальности</a>
-                    <a href="#" class="footer__policy" lang="en">Cookies Policy</a>
+                    <a href="https://vroomgames.ru/politika" target="_blank" class="footer__policy">Политика конфиденциальности</a>
+                    <a href="https://vroomgames.ru/oferta" target="_blank" class="footer__policy">Оферта</a>
                 </div>
             </div>
-
+        </div>
     </footer>
 
     <script src="scripts/portfolio.js"></script>
