--- a/contact.html
+++ b/contact.html
@@ -67,19 +67,19 @@
                         </div>
                     </div>
                     <ul class="form-description__links">
-                        <li><a href="https://www-linkedin.com/" class="form-description__link"><img
+                        <li><a href="https://www-linkedin.com/" target="_blank" class="form-description__link"><img
                                     src="images/social_icon_linkedin.svg" alt="Линкедин."
                                     class="description__link-image"></a></li>
-                        <li><a href="https://www.google.ru/" class="form-description__link"><img
+                        <li><a href="https://www.google.ru/" target="_blank" class="form-description__link"><img
                                     src="images/social_icon_google.svg" alt="Гугл." class="description__link-image"></a>
                         </li>
-                        <li><a href="https://www.facebook.com/" class="form-description__link"><img
+                        <li><a href="https://www.facebook.com/" target="_blank" class="form-description__link"><img
                                     src="images/social_icon_facebook.svg" alt="Фейсбук."
                                     class="description__link-image"></a></li>
-                        <li><a href="https://dribbble.com/" class="form-description__link"><img
+                        <li><a href="https://dribbble.com/" target="_blank" class="form-description__link"><img
                                     src="images/social_icon_dribbble.svg" alt="Дрибл."
                                     class="description__link-image"></a></li>
-                        <li><a href="https://instagram.com/" class="form-description__link"><img
+                        <li><a href="https://instagram.com/" target="_blank" class="form-description__link"><img
                                     src="images/social_icon_instagram.svg" alt="Инстаграм."
                                     class="description__link-image"></a></li>
                     </ul>
