fix: add link to all pages

--- a/career.html
+++ b/career.html
@@ -50,8 +50,8 @@
             <p class="page-header__subtitle">Карьера</p>
             <p class="page-header__description">Присоединяйтесь к команде победителей, способных решать масштабные
                 нешаблонные задачи, достойные лучших умов отрасли.</p>
-            <button type="button" class="button-read-more button-read-more_place_career">Узнать
-                больше</button>
+            <a href="team.html" target="_blank" class="button-read-more button-read-more_place_career">Узнать
+                больше</a>
         </div>
     </header>
     <main class="content">
@@ -241,8 +241,8 @@
                     </div>
                     <div class="resume-form__chapter resume-form__chapter_type_submission">
                         <div class="resume-form__submission">
-                            <p class="form-footnote"><span
-                                class="form-footnote form-footnote_span_accent">*</span> обязательные поля для заполнения</p>
+                            <p class="form-footnote"><span class="form-footnote form-footnote_span_accent">*</span>
+                                обязательные поля для заполнения</p>
                             <button type="submit" class="resume-form__submission-btn">Подать заявку</button>
                         </div>
                     </div>
