--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 находим для
                 них
                 лучшие решения.</p>
-            <button type="button" class="button-project-order">Заказать проект</button>
+            <a href="discussion.html" target="_blank" class="button-project-order">Заказать проект</a>
         </div>
         <ul class="header__advantages">
             <li>
@@ -93,8 +93,8 @@
                     реагировать на потребности заказчиков со всего света, сохраняя комфортный уровень цен.
                 </p>
                 <div class="info__buttons">
-                    <button type="button" class="button-vacancies">Вакансии</button>
-                    <button type="button" class="button-read-more">Читать далее</button>
+                    <a href="career.html" target="_blank" class="button-vacancies">Вакансии</a>
+                    <a href="team.html" target="_blank" class="button-read-more">Читать далее</a>
                 </div>
             </div>
         </section>
@@ -144,7 +144,7 @@
                         удобные и понятные интерфейсы.</p>
                 </article>
             </div>
-            <a href="#" target="_blank" class="suggestions__link">Все услуги &rarr;</a>
+            <a href="projects.html#all-services" target="_blank" class="suggestions__link">Все услуги &rarr;</a>
         </section>
         <section class="portfolio">
             <div class="portfolio__wrapper block-indent">
@@ -190,9 +190,10 @@
                     </article>
                 </div>
                 <div class="portfolio__buttons">
-                    <button type="button" class="portfolio-button">Портфолио</button>
-                    <button type="button" class="button-project-order button-project-order_place_portfolio">Заказать
-                        проект</button>
+                    <a href="portfolio.html" target="_blank" class="button-portfolio">Портфолио</a>
+                    <a href="discussion.html" target="_blank"
+                        class="button-project-order button-project-order_place_portfolio">Заказать
+                        проект</a>
                 </div>
             </div>
         </section>
@@ -315,8 +316,7 @@
                         <textarea type="text" name="message" placeholder="Сообщение"
                             class="contacts__form-input contacts__form-input_type_textarea"></textarea>
                         <div class="contacts__form-button-wrapper">
-                            <label class="form-footnote"><span
-                                    class="form-footnote form-footnote_span_accent">*</span>
+                            <label class="form-footnote"><span class="form-footnote form-footnote_span_accent">*</span>
                                 обязательные поля для заполнения
                                 <button type="submit" class="contacts__form-button">Отправить</button></label>
                             <p class="form-footnote">Нажимая на кнопку, вы соглашаетесь с <a
