--- a/projects.html
+++ b/projects.html
@@ -53,8 +53,10 @@
                 методологию Agile, проверенные на практике платформы для организации совместной работы с заказчиком,
                 передовые инструменты для разработки, многопрофильные команды специалистов с различными навыками и
                 распределенную глобальную модель оказания услуг.</p>
-            <button type="button" class="button-project-order button-project-order_place_projects">Заказать
-                проект</button>
+            <!-- <button type="button" class="button-project-order button-project-order_place_projects">Заказать
+                проект</button> -->
+            <a href="discussion.html" target="_blank" class="button-project-order button-project-order_place_projects">Заказать
+                проект</a>
         </div>
     </header>
     <main class="content">
@@ -89,7 +91,7 @@
                 </article>
             </div>
         </section>
-        <section class="services block-indent">
+        <section class="services block-indent" id="all-services">
             <div class="services__contaner">
                 <div class="services__heading">
                     <div class="block-heading block-heading_place_projects-services">
@@ -140,7 +142,7 @@
                                 <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
                                     только этот этап.
                                 </p>
-                                <a href="" class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <a href="discussion.html" target="_blank" class="services__card-description-offer-link">Начать работу &xrarr;</a>
                                 <button type="button"
                                     class="button-project-order button-project-order_place_projects-services">Заказать
                                     проект</button>
@@ -164,7 +166,7 @@
                                 <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
                                     только этот этап.
                                 </p>
-                                <a href="" class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <a href="discussion.html" target="_blank" class="services__card-description-offer-link">Начать работу &xrarr;</a>
                                 <button type="button"
                                     class="button-project-order button-project-order_place_projects-services">Заказать
                                     проект</button>
@@ -190,7 +192,7 @@
                                 <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
                                     только этот этап.
                                 </p>
-                                <a href="" class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <a href="discussion.html" target="_blank" class="services__card-description-offer-link">Начать работу &xrarr;</a>
                                 <button type="button"
                                     class="button-project-order button-project-order_place_projects-services">Заказать
                                     проект</button>
@@ -217,7 +219,7 @@
                                 <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
                                     только этот этап.
                                 </p>
-                                <a href="" class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <a href="discussion.html" target="_blank" class="services__card-description-offer-link">Начать работу &xrarr;</a>
                                 <button type="button"
                                     class="button-project-order button-project-order_place_projects-services">Заказать
                                     проект</button>
@@ -242,7 +244,7 @@
                                 <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
                                     только этот этап.
                                 </p>
-                                <a href="#" class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <a href="discussion.html" target="_blank" class="services__card-description-offer-link">Начать работу &xrarr;</a>
                                 <button type="button"
                                     class="button-project-order button-project-order_place_projects-services">Заказать
                                     проект</button>
@@ -265,7 +267,7 @@
                                 <p class="services__card-description-offer-text">Можем пройти весь путь или выполнить
                                     только этот этап.
                                 </p>
-                                <a href="#" class="services__card-description-offer-link">Начать работу &xrarr;</a>
+                                <a href="discussion.html" target="_blank" class="services__card-description-offer-link">Начать работу &xrarr;</a>
                                 <button type="button"
                                     class="button-project-order button-project-order_place_projects-services">Заказать
                                     проект</button>
@@ -383,8 +385,8 @@
                     </div>
                     <div class="project-form__chapter project-form__chapter_type_submission">
                         <div class="project-form__submission">
-                            <p class="form-footnote"><span
-                                class="form-footnote form-footnote_span_accent">*</span> обязательные поля для заполнения</p>
+                            <p class="form-footnote"><span class="form-footnote form-footnote_span_accent">*</span>
+                                обязательные поля для заполнения</p>
                             <button type="submit" class="project-form__submission-btn">Подать заявку</button>
                         </div>
                     </div>
