--- a/team.html
+++ b/team.html
@@ -19,17 +19,23 @@
             </a>
             <nav class="heading__menu">
                 <ul class="heading__menu-links">
-                    <li class="heading__menu-item"><a href="index.html" target="_blank" class="heading__menu-link">Главная</a>
+                    <li class="heading__menu-item"><a href="index.html" target="_blank"
+                            class="heading__menu-link">Главная</a>
                     </li>
-                    <li class="heading__menu-item"><a href="team.html" target="_blank" class="heading__menu-link">Команда</a>
+                    <li class="heading__menu-item"><a href="team.html" target="_blank"
+                            class="heading__menu-link">Команда</a>
                     </li>
-                    <li class="heading__menu-item"><a href="projects.html" target="_blank" class="heading__menu-link">Услуги</a>
+                    <li class="heading__menu-item"><a href="projects.html" target="_blank"
+                            class="heading__menu-link">Услуги</a>
                     </li>
-                    <li class="heading__menu-item"><a href="career.html" target="_blank" class="heading__menu-link">Карьера</a>
+                    <li class="heading__menu-item"><a href="career.html" target="_blank"
+                            class="heading__menu-link">Карьера</a>
                     </li>
-                    <li class="heading__menu-item"><a href="portfolio.html" target="_blank" class="heading__menu-link">Портфолио</a>
+                    <li class="heading__menu-item"><a href="portfolio.html" target="_blank"
+                            class="heading__menu-link">Портфолио</a>
                     </li>
-                    <li class="heading__menu-item"><a href="contact.html" target="_blank" class="heading__menu-link">Контакты</a>
+                    <li class="heading__menu-item"><a href="contact.html" target="_blank"
+                            class="heading__menu-link">Контакты</a>
                     </li>
                 </ul>
                 <button type="button" class="heading__burger-menu" aria-label="Кнопка меню."></button>
@@ -111,7 +117,7 @@
             <div class="vacancies__content">
                 <h2 class="vacancies__title">Открытые позиции</h2>
                 <p class="vacancies__subtitle">Присоединяйтесь к нам</p>
-                <button type="button" class="button-vacancies button-vacancies_place_team">Узнать больше</button>
+                <a href="career.html" target="_blank" class="button-vacancies button-vacancies_place_team">Узнать больше</a>
             </div>
         </section>
     </main>
@@ -132,19 +138,24 @@
                 </div>
                 <div class="footer__menu-container">
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><a href="index.html" target="_blank" class="footer__menu-link">Главная</a>
+                        <li class="footer__menu-item"><a href="index.html" target="_blank"
+                                class="footer__menu-link">Главная</a>
                         </li>
-                        <li class="footer__menu-item"><a href="team.html" target="_blank" class="footer__menu-link">Команда</a>
+                        <li class="footer__menu-item"><a href="team.html" target="_blank"
+                                class="footer__menu-link">Команда</a>
                         </li>
-                        <li class="footer__menu-item"><a href="projects.html" target="_blank" class="footer__menu-link">Услуги</a>
+                        <li class="footer__menu-item"><a href="projects.html" target="_blank"
+                                class="footer__menu-link">Услуги</a>
                         </li>
                     </ul>
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><a href="career.html" target="_blank" class="footer__menu-link">Карьера</a>
+                        <li class="footer__menu-item"><a href="career.html" target="_blank"
+                                class="footer__menu-link">Карьера</a>
                         </li>
                         <li class="footer__menu-item"><a href="portfolio.html" target="_blank"
                                 class="footer__menu-link">Портфолио</a></li>
-                        <li class="footer__menu-item"><a href="contact.html" target="_blank" class="footer__menu-link">Контакты</a>
+                        <li class="footer__menu-item"><a href="contact.html" target="_blank"
+                                class="footer__menu-link">Контакты</a>
                         </li>
                     </ul>
                     <ul class="footer__menu">
@@ -184,13 +195,14 @@
             <div class="footer__info">
                 <p class="footer__signature">&copy; 2022. Дмитрий Малиновский</p>
                 <div class="footer__policy-container">
-                    <a href="https://vroomgames.ru/politika" target="_blank" class="footer__policy">Политика конфиденциальности</a>
+                    <a href="https://vroomgames.ru/politika" target="_blank" class="footer__policy">Политика
+                        конфиденциальности</a>
                     <a href="https://vroomgames.ru/oferta" target="_blank" class="footer__policy">Оферта</a>
                 </div>
             </div>
         </div>
     </footer>
-    
+
     <script src="scripts/team.js"></script>
 </body>
 
