--- a/portfolio.html
+++ b/portfolio.html
@@ -19,17 +19,23 @@
             </a>
             <nav class="heading__menu">
                 <ul class="heading__menu-links">
-                    <li class="heading__menu-item"><a href="index.html" target="_blank" class="heading__menu-link">Главная</a>
+                    <li class="heading__menu-item"><a href="index.html" target="_blank"
+                            class="heading__menu-link">Главная</a>
                     </li>
-                    <li class="heading__menu-item"><a href="team.html" target="_blank" class="heading__menu-link">Команда</a>
+                    <li class="heading__menu-item"><a href="team.html" target="_blank"
+                            class="heading__menu-link">Команда</a>
                     </li>
-                    <li class="heading__menu-item"><a href="projects.html" target="_blank" class="heading__menu-link">Услуги</a>
+                    <li class="heading__menu-item"><a href="projects.html" target="_blank"
+                            class="heading__menu-link">Услуги</a>
                     </li>
-                    <li class="heading__menu-item"><a href="career.html" target="_blank" class="heading__menu-link">Карьера</a>
+                    <li class="heading__menu-item"><a href="career.html" target="_blank"
+                            class="heading__menu-link">Карьера</a>
                     </li>
-                    <li class="heading__menu-item"><a href="portfolio.html" target="_blank" class="heading__menu-link">Портфолио</a>
+                    <li class="heading__menu-item"><a href="portfolio.html" target="_blank"
+                            class="heading__menu-link">Портфолио</a>
                     </li>
-                    <li class="heading__menu-item"><a href="contact.html" target="_blank" class="heading__menu-link">Контакты</a>
+                    <li class="heading__menu-item"><a href="contact.html" target="_blank"
+                            class="heading__menu-link">Контакты</a>
                     </li>
                 </ul>
                 <button type="button" class="heading__burger-menu" aria-label="Кнопка меню."></button>
@@ -44,8 +50,9 @@
             <p class="page-header__subtitle">Портфолио</p>
             <p class="page-header__description">Мы можем разработать для вас любое индивидуальное решение. Наша
                 компания обладает широкими возможностями для успешного создания технически-сложных систем.</p>
-            <button type="button" class="button-project-order button-project-order_place_projects">Заказать
-                проект</button>
+            <a href="discussion.html" target="_blank"
+                class="button-project-order button-project-order_place_projects">Заказать
+                проект</a>
         </div>
     </header>
     <main class="content">
@@ -123,7 +130,7 @@
                 <p class="ideas__description">У вас есть уже существующий проект, который вы хотите усовершенствовать?
                     Вы хотите воплотить в жизнь смелую идею, но вам нужна помощь? Или вы вообще не знаете, с чего начать
                     реализацию проекта?</p>
-                <button type="button" class="button-connect">Связаться</button>
+                <a href="contact.html" target="_blank" class="button-connect">Связаться</a>
             </div>
         </section>
     </main>
@@ -144,19 +151,24 @@
                 </div>
                 <div class="footer__menu-container">
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><a href="index.html" target="_blank" class="footer__menu-link">Главная</a>
+                        <li class="footer__menu-item"><a href="index.html" target="_blank"
+                                class="footer__menu-link">Главная</a>
                         </li>
-                        <li class="footer__menu-item"><a href="team.html" target="_blank" class="footer__menu-link">Команда</a>
+                        <li class="footer__menu-item"><a href="team.html" target="_blank"
+                                class="footer__menu-link">Команда</a>
                         </li>
-                        <li class="footer__menu-item"><a href="projects.html" target="_blank" class="footer__menu-link">Услуги</a>
+                        <li class="footer__menu-item"><a href="projects.html" target="_blank"
+                                class="footer__menu-link">Услуги</a>
                         </li>
                     </ul>
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><a href="career.html" target="_blank" class="footer__menu-link">Карьера</a>
+                        <li class="footer__menu-item"><a href="career.html" target="_blank"
+                                class="footer__menu-link">Карьера</a>
                         </li>
                         <li class="footer__menu-item"><a href="portfolio.html" target="_blank"
                                 class="footer__menu-link">Портфолио</a></li>
-                        <li class="footer__menu-item"><a href="contact.html" target="_blank" class="footer__menu-link">Контакты</a>
+                        <li class="footer__menu-item"><a href="contact.html" target="_blank"
+                                class="footer__menu-link">Контакты</a>
                         </li>
                     </ul>
                     <ul class="footer__menu">
@@ -196,7 +208,8 @@
             <div class="footer__info">
                 <p class="footer__signature">&copy; 2022. Дмитрий Малиновский</p>
                 <div class="footer__policy-container">
-                    <a href="https://vroomgames.ru/politika" target="_blank" class="footer__policy">Политика конфиденциальности</a>
+                    <a href="https://vroomgames.ru/politika" target="_blank" class="footer__policy">Политика
+                        конфиденциальности</a>
                     <a href="https://vroomgames.ru/oferta" target="_blank" class="footer__policy">Оферта</a>
                 </div>
             </div>
