--- a/vr.html
+++ b/vr.html
@@ -19,17 +19,23 @@
             </a>
             <nav class="heading__menu">
                 <ul class="heading__menu-links">
-                    <li class="heading__menu-item"><a href="index.html" target="_blank" class="heading__menu-link">Главная</a>
+                    <li class="heading__menu-item"><a href="index.html" target="_blank"
+                            class="heading__menu-link">Главная</a>
                     </li>
-                    <li class="heading__menu-item"><a href="team.html" target="_blank" class="heading__menu-link">Команда</a>
+                    <li class="heading__menu-item"><a href="team.html" target="_blank"
+                            class="heading__menu-link">Команда</a>
                     </li>
-                    <li class="heading__menu-item"><a href="projects.html" target="_blank" class="heading__menu-link">Услуги</a>
+                    <li class="heading__menu-item"><a href="projects.html" target="_blank"
+                            class="heading__menu-link">Услуги</a>
                     </li>
-                    <li class="heading__menu-item"><a href="career.html" target="_blank" class="heading__menu-link">Карьера</a>
+                    <li class="heading__menu-item"><a href="career.html" target="_blank"
+                            class="heading__menu-link">Карьера</a>
                     </li>
-                    <li class="heading__menu-item"><a href="portfolio.html" target="_blank" class="heading__menu-link">Портфолио</a>
+                    <li class="heading__menu-item"><a href="portfolio.html" target="_blank"
+                            class="heading__menu-link">Портфолио</a>
                     </li>
-                    <li class="heading__menu-item"><a href="contact.html" target="_blank" class="heading__menu-link">Контакты</a>
+                    <li class="heading__menu-item"><a href="contact.html" target="_blank"
+                            class="heading__menu-link">Контакты</a>
                     </li>
                 </ul>
                 <button type="button" class="heading__burger-menu" aria-label="Кнопка меню."></button>
@@ -47,7 +53,7 @@
                 протестировать новейшее оборудование, сыграть в увлекательные игры, пообщаться с единомышленниками
                 и найти друзей. Также компания специализируется на графическом и игровом дизайне, создании визуальных
                 эффектов.</p>
-            <button type="button" class="button-vroom">vroomgames.ru</button>
+            <a href="https://vroomgames.ru/" target="_blank" class="button-vroom">vroomgames.ru</a>
         </div>
     </header>
     <main class="content">
@@ -76,7 +82,8 @@
                 <li class="supplementary-cards__card">
                     <div class="supplementary-cards__card-img-wrapper">
                         <img src="images/icon_skolkovo.svg" alt="Сколково." class="supplementary-cards__card-img">
-                        <img src="images/icon_skolkovo_2.svg" alt="Сколково." class="supplementary-cards__card-img-mobile">
+                        <img src="images/icon_skolkovo_2.svg" alt="Сколково."
+                            class="supplementary-cards__card-img-mobile">
                     </div>
                     <p class="supplementary-cards__card-text">Аккредитованный участник инновационного центра «Сколково»
                     </p>
@@ -249,7 +256,7 @@
                     <li class="offer__item">Франшиза игрового заведения стоимостью от 3 млн. руб.«под ключ»</li>
                 </ul>
                 <p class="offer__contacts">Контактный телефон: <span class="offer__tel">+7 (812) 920-50-80</span></p>
-                <button type="button" class="button-vroom">vroomgames.ru</button>
+                <a href="https://vroomgames.ru/" target="_blank" class="button-vroom">vroomgames.ru</a>
             </div>
         </section>
     </main>
@@ -270,19 +277,24 @@
                 </div>
                 <div class="footer__menu-container">
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><a href="index.html" target="_blank" class="footer__menu-link">Главная</a>
+                        <li class="footer__menu-item"><a href="index.html" target="_blank"
+                                class="footer__menu-link">Главная</a>
                         </li>
-                        <li class="footer__menu-item"><a href="team.html" target="_blank" class="footer__menu-link">Команда</a>
+                        <li class="footer__menu-item"><a href="team.html" target="_blank"
+                                class="footer__menu-link">Команда</a>
                         </li>
-                        <li class="footer__menu-item"><a href="projects.html" target="_blank" class="footer__menu-link">Услуги</a>
+                        <li class="footer__menu-item"><a href="projects.html" target="_blank"
+                                class="footer__menu-link">Услуги</a>
                         </li>
                     </ul>
                     <ul class="footer__menu">
-                        <li class="footer__menu-item"><a href="career.html" target="_blank" class="footer__menu-link">Карьера</a>
+                        <li class="footer__menu-item"><a href="career.html" target="_blank"
+                                class="footer__menu-link">Карьера</a>
                         </li>
                         <li class="footer__menu-item"><a href="portfolio.html" target="_blank"
                                 class="footer__menu-link">Портфолио</a></li>
-                        <li class="footer__menu-item"><a href="contact.html" target="_blank" class="footer__menu-link">Контакты</a>
+                        <li class="footer__menu-item"><a href="contact.html" target="_blank"
+                                class="footer__menu-link">Контакты</a>
                         </li>
                     </ul>
                     <ul class="footer__menu">
@@ -322,7 +334,8 @@
             <div class="footer__info">
                 <p class="footer__signature">&copy; 2022. Дмитрий Малиновский</p>
                 <div class="footer__policy-container">
-                    <a href="https://vroomgames.ru/politika" target="_blank" class="footer__policy">Политика конфиденциальности</a>
+                    <a href="https://vroomgames.ru/politika" target="_blank" class="footer__policy">Политика
+                        конфиденциальности</a>
                     <a href="https://vroomgames.ru/oferta" target="_blank" class="footer__policy">Оферта</a>
                 </div>
             </div>
